@@ -1,4 +1,4 @@
-package com.veefin.razorpay.service;
+package com.veefin.payment_gateway.service;
 
 import com.veefin.common.exception.ResourceNotFoundException;
 import com.veefin.invoice.dto.ApiListResponse;
@@ -7,10 +7,13 @@ import com.veefin.invoice.dto.PaymentTransactionListResponseDTO;
 import com.veefin.invoice.dto.PaymentTransactionResponseDTO;
 import com.veefin.invoice.entity.InvoiceData;
 import com.veefin.invoice.service.InvoiceDataService;
-import com.veefin.razorpay.entity.PaymentTransaction;
-import com.veefin.razorpay.repository.PaymentRepository;
-import com.veefin.razorpay.specification.PaymentTransactionSpecification;
+import com.veefin.payment_gateway.entity.model.PaymentTransaction;
+import com.veefin.payment_gateway.enums.PaymentEnums;
+import com.veefin.payment_gateway.repository.PaymentRepository;
+import com.veefin.payment_gateway.specification.PaymentTransactionSpecification;
 import lombok.RequiredArgsConstructor;
+import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.document.Document;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -22,6 +25,7 @@ import java.io.IOException;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,126 +36,10 @@ public class PaymentTransactionService {
     private final InvoiceDataService invoiceDataService;
     private final DemoTransactionData demoTransactionData;
     private final PaymentReceiptPdfService paymentReceiptPdfService;
+    private final TransactionVectorStore transactionVectorStore;
+    private final ChatClient chatClient;
 
     DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-
-    public String getAllPaymentHistory() {
-        List<PaymentTransaction> payments = paymentRepository.findAll();
-
-        if (payments.isEmpty()) {
-            return "📋 No payment history found.";
-        }
-
-        StringBuilder response = new StringBuilder();
-        response.append("==================================================\n");
-        response.append("                  PAYMENT HISTORY                  \n");
-        response.append("==================================================\n\n");
-
-        for (PaymentTransaction payment : payments) {
-            InvoiceData invoice = invoiceDataService.getInvoiceById(payment.getInvoiceUuid());
-
-            String formattedDate = payment.getCreatedAt() != null
-                    ? payment.getCreatedAt().format(dateFormatter)
-                    : "Unknown";
-
-            String invoiceNumber = invoice != null ? invoice.getInvoiceNumber() : "Unknown";
-            String merchantName = invoice != null ? invoice.getMerchantName() : "Unknown";
-
-            // Construct local download link
-            String downloadLink = String.format(
-                    "[Download Receipt for %s](http://localhost:8080/payment-transactions/download?identifier=%s)",
-                    invoiceNumber,
-                    payment.getUuid()
-            );
-
-            response.append(String.format("""
-                            Payment ID   : %s
-                            Invoice      : %s
-                            Merchant     : %s
-                            Amount       : ₹%.2f
-                            Method       : %s
-                            Status       : %s
-                            Date         : %s
-                            Download     : %s
-                            --------------------------------------------------
-                            
-                            """,
-                    payment.getRazorpayPaymentId(),
-                    invoiceNumber,
-                    merchantName,
-                    payment.getAmount(),
-                    payment.getPaymentMethod(),
-                    payment.getStatus(),
-                    formattedDate,
-                    downloadLink
-            ));
-        }
-
-        response.append("To view more details, type: \"show payment history\"\n");
-        response.append("==================================================\n");
-
-        return response.toString();
-    }
-
-        public String getPaymentHistoryForInvoice(String identifier) {
-        // Find invoice first
-        InvoiceData invoice = invoiceDataService.findInvoiceByIdentifier(identifier);
-
-        if (invoice == null) {
-            return String.format("❌ Invoice '%s' not found.", identifier);
-        }
-
-        // Find payments for this invoice
-        List<PaymentTransaction> payments = paymentRepository.findByInvoiceUuid(invoice.getUuid());
-
-        if (payments == null) {
-            return String.format("📋 No payment history found for invoice '%s'.", invoice.getInvoiceNumber());
-        }
-
-        StringBuilder response = new StringBuilder();
-
-        response.append(String.format("""
-==================================================
-           PAYMENT HISTORY FOR INVOICE %s
-==================================================
-
-""", invoice.getInvoiceNumber()));
-
-        for (PaymentTransaction payment : payments) {
-
-            String downloadLink = String.format(
-                    "[Download Receipt for %s](http://localhost:8080/payment-transactions/download?identifier=%s)",
-                    invoice.getInvoiceNumber(),
-                    payment.getUuid()
-            );
-            response.append(String.format("""
-Payment ID   : %s
-Merchant     : %s
-Amount       : ₹%.2f
-Method       : %s
-Status       : %s
-Date         : %s
-Order ID     : %s
-Download link: %s
---------------------------------------------------
-
-""",
-                    payment.getRazorpayPaymentId(),
-                    invoice.getMerchantName(),
-                    payment.getAmount(),
-                    payment.getPaymentMethod(),
-                    payment.getStatus(),
-                    payment.getCreatedAt().format(java.time.format.DateTimeFormatter.ofPattern("dd-MMM-yyyy HH:mm")),
-                    payment.getRazorpayOrderId(),
-                    downloadLink
-            ));
-        }
-
-        response.append("To view more details, type: \"show payment history\"");
-
-        return response.toString();
-
-    }
 
     /**
      * Get paginated and filtered list of payment transactions
@@ -187,7 +75,7 @@ Download link: %s
         // Convert to DTOs
         List<PaymentTransactionResponseDTO> content = paymentPage.getContent().stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
         data.addAll(content);
 
         // Build pagination info
@@ -227,8 +115,8 @@ Download link: %s
                 : "Unknown";
 
         return PaymentTransactionResponseDTO.builder()
-                .transactionId(payment.getRazorpayOrderId())
-                .reference(payment.getRazorpayPaymentId())
+                .transactionId(payment.getTransactionId())
+                .reference("REF-"+ UUID.randomUUID())
                 .amount(payment.getAmount())
                 .vendorName(invoice != null ? invoice.getMerchantName() : null)
                 .date(formattedDate)
@@ -269,9 +157,71 @@ Download link: %s
         if (identifier == null || identifier.trim().isEmpty()) {
             return null;
         }
-        PaymentTransaction transaction = paymentRepository.findByUuid(identifier);
 
-        return transaction;
+        return paymentRepository.findByUuid(identifier);
     }
+
+
+
+    public String handlePaymentQuery(String userPrompt) {
+        try {
+            // RAG: Search vector DB, limit to top 5 relevant payments
+            List<Document> relevantPayments = transactionVectorStore.searchPayments(userPrompt, 5);
+
+            if (relevantPayments.isEmpty()) {
+                return "No payment transactions found matching your query.";
+            }
+
+            boolean hasInvalidData = relevantPayments.stream()
+                    .anyMatch(doc -> {
+                        Object invoiceUuid = doc.getMetadata().get("invoiceUuid");
+                        return invoiceUuid == null || invoiceUuid.toString().trim().isEmpty() ||
+                                invoiceUuid.toString().equals("null");
+                    });
+
+            StringBuilder context = new StringBuilder();
+            if (hasInvalidData) {
+                userPrompt = "just say no transactions found in few words";
+            }else {
+
+                // Build minimal context (only essential fields)
+
+                for (Document doc : relevantPayments.subList(0, Math.min(5, relevantPayments.size()))) {
+                    context.append("Payment ID: ").append(doc.getMetadata().get("paymentId"))
+                            .append(", Invoice UUID: ").append(doc.getMetadata().get("invoiceUuid"))
+                            .append(", Amount: ₹").append(doc.getMetadata().get("amount"))
+                            .append(", Status: ").append(doc.getMetadata().get("status"))
+                            .append(", Date: ").append(doc.getMetadata().get("createdAt"))
+                            .append("\n");
+                }
+            }
+
+            // Shortened prompt, still provides same info for LLM
+            String ragPrompt = String.format("""
+            You are a payment transaction assistant. Use the data below to answer the user's query naturally.
+
+            User Query: %s
+            Payment Data: %s
+            Respond helpfully:
+        """, userPrompt, context.toString());
+
+            // Call LLM
+            return chatClient.prompt()
+                    .user(ragPrompt)
+                    .call()
+                    .content();
+
+        } catch (Exception e) {
+            return "Failed to process payment query: " + e.getMessage();
+        }
+    }
+
+
+    public void updatePaymentTransaction(String transactionId) {
+        PaymentTransaction paymentTransaction = paymentRepository.findByTransactionId(transactionId);
+        paymentTransaction.setStatus(PaymentEnums.SUCCESS.name());
+        paymentRepository.save(paymentTransaction);
+    }
+
 
 }
